--- a/Zhihu.Universal/Zhihu/Zhihu.csproj
+++ b/Zhihu.Universal/Zhihu/Zhihu.csproj
@@ -394,6 +394,7 @@
     <Compile Include="Converter\VotingToHighlightConverter.cs" />
     <Compile Include="Converter\VotingToImageConverter.cs" />
     <Compile Include="Helper\Extensions.cs" />
+    <Compile Include="Helper\LayoutHelper.cs" />
     <Compile Include="Helper\RumtimeResourceDictionary.cs" />
     <Compile Include="Helper\HtmlHelper.cs" />
     <Compile Include="Helper\ListViewHelper.cs" />
